# Deepspeed-template

./: .gitignore  QUICK_START_AWS.md  README.md  aws_setup_g4dn.md  main.py  monitor_gpu.sh  pyproject.toml  requirements.txt  run_on_g4dn.sh  setup_aws_instance.sh
config/deepspeed/: zero-2.json  zero-3.json
src/: __init__.py  data.py  train.py  utils.py
src/data/: __init__.py  dataloader.py
test/: test_training.py  test_training_cpu.py
